Linux support: open java.desktop/sun.awt.X11